2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* proced.el (proced-mode-map): Prefer "m" for proced-mark.

2009-09-11  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-var-update-regexp): Delete.
	(gdb-var-update-handler): Use json parsing.

2009-09-11  Juanma Barranquero  <lekktu@gmail.com>

	* vc-annotate.el (vc-annotate): Use the main file's coding-system to
	decode annotated text, regardless of language environment.  (Bug#2741)

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (autoloads): Make rmail.el writable as well.

2009-09-11  Glenn Morris  <rgm@gnu.org>

	* dired-aux.el, dired-x.el: Put autoloads in dired.el rather than
	loaddefs.el.
	* dired.el: Regenerate with extracted autoloads.
	* Makefile.in (autoloads): Make dired.el writable.

	* ibuf-ext.el: Put autoloads in ibuffer.el rather than loaddefs.el.
	* ibuffer.el: Regenerate with extracted autoloads.
	* Makefile.in (autoloads): Make ibuffer.el writable.

	* paths.el (prune-directory-list, gnus-nntp-service, rmail-file-name):
	* version.el (emacs-copyright, emacs-major-version)
	(emacs-minor-version): Reformat doc-strings for make-docfile.

	* apropos.el (apropos-documentation-check-doc-file): Exclude unbound
	functions and variables, since they must be stuff specific to some other
	platform.
	(apropos-print): Make mouse-click message less specific about button.

	* emacs-lisp/cl-macs.el (define-compiler-macro): Add a property
	that records where a macro was defined.
	* help-fns.el (describe-function-1): Mention if a function has a
	compiler-macro.
	* help-mode.el (help-function-cmacro): New button.

	* locate.el (top-level): Always require dired.
	(locate-mode-map): Initialize inside the defvar.

	* net/ange-ftp.el (dired-compress-file): Declare.
	(ange-ftp-dired-compress-file): Add doc string.

	* term/ns-win.el (x-display-name, x-setup-function-keys):
	Unify doc-strings with X versions.

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>
